# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "xvideos-dl"
version = "1.4.0"
description = "CLI to download videos from https://xvideos.com"
readme = "README.md"
authors = [
  "xvideos-dl <lonsty@sina.com>"
]
license = "MIT"
repository = "https://github.com/lonsty/xvideos-dl"
homepage = "https://github.com/lonsty/xvideos-dl"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = ["xvideos", "downloader", "videos"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"xvideos-dl" = "xvideos_dl.__main__:app"

[tool.poetry.dependencies]
python = "^3.6.1"
importlib_metadata = {version = ">=1.6,<4.0", python = "<3.8"}
typer = {extras = ["all"], version = "^0.3.2"}
rich = "^10.0.0"
beautifulsoup4 = "^4.9.0"
cursor = "^1.3.4"
integv = "^1.3.0"
requests = "^2.25.0"
ffmpeg-python = "^0.2.0"
halo = "^0.0.31"

[tool.poetry.dev-dependencies]
darglint = "^1.7.0"
isort = "^5.8.0"
pyupgrade = "^2.11.0"
black = "^20.8b1"
mypy = "^0.790"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.2"
pylint = "^2.7.2"
pydocstyle = "^6.0.0"
pre-commit = "^2.11.1"

[tool.black]
# https://github.com/psf/black
line-length = 120
target-version = ["py36"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 120
